--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "file-saver": "^2.0.5",
+    "mic-recorder-to-mp3": "^2.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-mic": "^12.4.6",
     "react-router-dom": "^6.21.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "recorder-js": "^1.0.7",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
