--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +14,7 @@
     "react-mic": "^12.4.6",
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
+    "react-spring": "^9.7.3",
     "recorder-js": "^1.0.7",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
