--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "react-router-dom": "^6.21.3",
     "react-scripts": "^5.0.1",
     "react-spring": "^9.7.3",
+    "react-tsparticles": "^2.12.2",
     "recorder-js": "^1.0.7",
     "styled-components": "^6.1.8",
+    "tsparticles": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
